--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
             <a href="index.html"><img src="Images/TT_gear.gif" class="logo_image"></a>
 			     <a href = 'team.html' class="nav_a">Team</a>
 			     <a href = 'sponsors.html' class="nav_a">Sponsors</a>
+                <a href = 'faq.html' class="nav_a">FAQs</a>
                 <a href = 'become_a_sponsor.html' class="nav_a">Become a Sponsor</a>
 			     <a href = 'outreach.html' class="nav_a">Outreach</a>
                 <a href = 'workshops.html' class="nav_a">Workshops</a>
+                <a href = 'calender.html' class="nav_a">Calender</a>
 			     <a href = 'contact.html' class="nav_a">Contact</a>
+                <a href = 'apply.html' class="nav_a">Apply</a>
 			     <a href = 'members_login.html' class="nav_a">Members Login</a>
 		</div>
 		
