Added styling to several pages

--- a/sponsors.html
+++ b/sponsors.html
@@ -14,7 +14,7 @@
                 <a href = 'become_a_sponsor.html' class="nav_a">Become a Sponsor</a>
 			     <a href = 'outreach.html' class="nav_a">Outreach</a>
                 <a href = 'workshops.html' class="nav_a">Workshops</a>
-                <a href = 'calender.html' class="nav_a">Calender</a>
+                <a href = 'calendar.html' class="nav_a">Calendar</a>
 			     <a href = 'contact.html' class="nav_a">Contact</a>
                 <a href = 'apply.html' class="nav_a">Apply</a>
 			     <a href = 'members_login.html' class="nav_a">Members Login</a>
