Minor CSS teaks

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
 				<div class = 'd-flex container flex-fill justify-content-center'>
 					<ul class = 'navbar-nav'>
 						<li class = 'nav-item'>
-							<a href = '#' class = 'nav-link'>Titanium Titans</a>
+							<a href = '#' class = 'nav-link'>
+								<img src = 'img/text.png' height = '30'>
+							</a>
 						</li>
 					</ul>
 				</div>
