--- a/test.html
+++ b/test.html
@@ -1,27 +1,28 @@
-<!DOCTYPE html>
-<html lang = 'en'>
+<html>
 	<head>
-		<meta charset = 'utf-8'>
-		<meta name = 'viewport' content = 'width = device-width, initial-scale = 1'>
 		<link rel = 'stylesheet' type = 'text/CSS' href = 'https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'>
+		<link rel = 'stylesheet' type = 'text/CSS' href = 'https://use.fontawesome.com/releases/v5.5.0/css/all.css'>
 		<script src = 'https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
 		<script src = 'https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
-		<link rel = 'stylesheet' type = 'text/CSS' href = 'style.css'>
 	</head>
 	<body>
-		<nav class = 'navbar navbar-expand-sm navbar-dark bg-dark'>
-			<div class = 'collapse navbar-collapse d-flex'>
-				<div class = 'd-flex container flex-fill justify-content-start'>
+		<nav class = 'navbar navbar-expand-lg navbar-dark bg-dark d-flex'>
+			<button class = 'navbar-toggler' data-toggle = 'collapse' data-target = '#navbar-content-desktop'>
+				<span class = 'navbar-toggler-icon'></span>
+			</button>
+			<div class = 'collapse navbar-collapse' id = 'navbar-content-desktop'>
+				<!-- Left -->
+				<div class = 'd-flex container-fluid justify-content-start justify-content-lg-start'>
 					<ul class = 'navbar-nav'>
-						<li class = 'nav-item'>	
+						<li class = 'nav-item d-none d-lg-flex'>	
 							<a href = '#' class = 'navbar-brand'>
-								<img src = 'img/tt.png' width = '30' height = '30'>
+								<img src = './img/tt.png' width = '30' height = '30'>
 							</a>
 						</li>
 						<li class = 'nav-item'><a href = '#' class = 'nav-link'>Home</a></li>
 						<li class = 'nav-item dropdown'>
 							<a href = '#' class = 'nav-link dropdown-toggle' data-toggle = 'dropdown'>Team</a>
-							<div class = 'dropdown-menu' aria-labelledby = 'navbarDropdown'>
+							<div class = 'dropdown-menu'>
 								<a href = '#' class = 'dropdown-item'>About</a>
 								<a href = '#' class = 'dropdown-item'>History</a>
 								<a href = '#' class = 'dropdown-item'>FAQ</a>
@@ -30,7 +31,7 @@
 						</li>
 						<li class = 'nav-item dropdown'>
 							<a href = '#' class = 'nav-link dropdown-toggle' data-toggle = 'dropdown'>Sponsors</a>
-							<div class = 'dropdown-menu' aria-labelledby = 'navbarDropdown'>
+							<div class = 'dropdown-menu'>
 								<a href = '#' class = 'dropdown-item'>About Sponsors</a>
 								<a href = '#' class = 'dropdown-item'>Current Sponsors</a>
 								<a href = '#' class = 'dropdown-item'>Become a Sponsor</a>
@@ -38,7 +39,7 @@
 						</li>
 						<li class = 'nav-item dropdown'>
 							<a href = '#' class = 'nav-link dropdown-toggle' data-toggle = 'dropdown'>Outreach</a>
-							<div class = 'dropdown-menu' aria-labelledby = 'navbarDropdown'>
+							<div class = 'dropdown-menu'>
 								<a href = '#' class = 'dropdown-item'>Community Events</a>
 								<a href = '#' class = 'dropdown-item'>Workshops</a>
 								<a href = '#' class = 'dropdown-item'>Media</a>
@@ -46,16 +47,18 @@
 						</li>
 					</ul>
 				</div>
-				<div class = 'd-flex container flex-fill justify-content-center'>
+				<!-- Center -->
+				<div class = 'container-fluid justify-content-start justify-content-lg-center d-none d-lg-flex'>
 					<ul class = 'navbar-nav'>
 						<li class = 'nav-item'>
-							<a href = '#' class = 'nav-link'>
-								<img src = 'img/text.png' height = '30'>
+							<a href = '/' class = 'nav-link'>
+								<img src = './img/text.png' height = '30'>
 							</a>
 						</li>
 					</ul>
 				</div>
-				<div class = 'd-flex container flex-fill justify-content-end'>
+				<!-- Right -->
+				<div class = 'd-flex container-fluid justify-content-start justify-content-lg-end'>
 					<ul class = 'navbar-nav'>
 						<li class = 'nav-item'>
 							<a href = '#' class = 'nav-link'>Join</a>
@@ -63,33 +66,12 @@
 						<li class = 'nav-item'>
 							<a href = '#' class = 'nav-link'>Contact</a>
 						</li>
+						<li class = 'nav-item'>
+							<a href = 'login' class = 'nav-link'>Login / Register</a>
+						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
-		<div class = 'container'>
-			<div class = 'row' id = 'carousel-row'>
-				<div class = 'col'>
-					<div id = 'demo' class = 'carousel slide' data-ride = 'carousel'>
-						<ul class = 'carousel-indicators'>
-							<li data-target = '#demo' data-slide-to = '0' class = 'active'></li>
-							<li data-target = '#demo' data-slide-to = '1'></li>
-							<li data-target = '#demo' data-slide-to = '2'></li>
-						</ul>
-						<div class = 'carousel-inner'>
-							<div class = 'carousel-item active'><img src = 'img/ss/1.jpg'></div>
-							<div class = 'carousel-item'><img src = 'img/ss/3.jpg'></div>
-							<div class = 'carousel-item'><img src = 'img/ss/4.jpg'></div>
-						</div>
-						<a class = 'carousel-control-prev' href = '#demo' data-slide = 'prev'>
-							<span class = 'carousel-control-prev-icon'></span>
-						</a>
-						<a class = 'carousel-control-next' href = '#demo' data-slide = 'next'>
-							<span class = 'carousel-control-next-icon'></span>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
 	</body>
 </html>
